Added few of my detials

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Harshal Garg - Portfolio</title>
+  <!-- New tab -->
+  <title>Harshal Garg</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -48,7 +49,7 @@
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <li><a href="#projects"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
         <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
         <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
@@ -59,14 +60,21 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Harshal Garg</h1>
+      <!-- Myname -->
+      <h1>Brandon Johnson</h1>
+      <!-- my profession -->
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
       <div class="social-links">
+        <!-- # will be replaced by my link -->
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-google-plus"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="github"><i class="bx bxl-github"></i></a>
+        <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a>
+        <a href="#" class="medium"><i class="bx bxl-medium"></i></a>
+        <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -79,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Website under progress please visit soon</p>
+          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -240,6 +248,9 @@
 
         <div class="section-title">
           <h2>Resume</h2>
+
+          <!-- extra line to
+          <p> Download my resume from <a href= "#"> here </a><p></p> -->
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -324,11 +335,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <!-- change image from here -->
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <!-- 2 click able links -->
                 <h4>App 1</h4>
                 <p>App</p>
                 <div class="portfolio-links">
+                  <!-- this herf = link -->
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
@@ -692,7 +706,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Brandon Johnson</h3>
+      <h3>Harshal Garg</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -700,6 +714,10 @@
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="github"><i class="bx bxl-github"></i></a>
+        <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a>
+        <a href="#" class="medium"><i class="bx bxl-medium"></i></a>
+        <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
