--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <!-- Myname -->
-      <h1>Brandon Johnson</h1>
+      <h1>Harshal Garg</h1>
       <!-- my profession -->
-      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <!-- later --><p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
       <div class="social-links">
         <!-- # will be replaced by my link -->
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-google-plus"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="#" class="github"><i class="bx bxl-github"></i></a>
-        <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a>
+        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="#" class="medium"><i class="bx bxl-medium"></i></a>
-        <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-google-plus"></i></a>
+        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!-- <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a> -->
+        <!-- <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a> -->
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
     </div>
   </section><!-- End Hero -->
