Added few Personal Details

--- a/index.html
+++ b/index.html
@@ -61,18 +61,19 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <!-- Myname -->
-      <h1>Harshal Garg</h1>
+      <h1>Harshal Garg. </h1>
       <!-- my profession -->
-      <!-- later --><p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+      <p>Caution - <span class="typed" data-typed-items="Site, is, under, construction."></span></p>
+      <!-- <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p> -->
       <div class="social-links">
         <!-- # will be replaced by my link -->
-        <a href="#" class="github"><i class="bx bxl-github"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="#" class="medium"><i class="bx bxl-medium"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-google-plus"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!-- <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a> -->
-        <!-- <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a> -->
+        <a href="https://github.com/gargharshal" class="github"><i class="bx bxl-github"></i></a>
+        <a href="https://in.linkedin.com/in/harshal-garg" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://medium.com/@gargharshal" class="medium"><i class="bx bxl-medium"></i></a>
+        <a href="mailto:harshalgargwork@gmail.com" class="google-plus"><i class="bx bxl-google-plus"></i></a>
+        <a href="https://www.instagram.com/harsh.al.garg/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <!-- <a href="#" class="hackerrank"><i class="bx bxl-hackerrank"></i></a> 
+        <a href="#" class="kaggle"><i class="bx bxl-kaggle"></i></a> -->
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       </div>
@@ -87,7 +88,8 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Hi 👋, I'm a Electrical and Electronics Engineer working in IT. I am tech savvy, cinephile and foodie (not Gourmet). I am currently learning and working on personal projects of Data Science and Machine Learning. I am trying to share my knowledge and experience with others through my Blog. 
+          </p>
         </div>
 
         <div class="row">
