--- a/index.html
+++ b/index.html
@@ -209,65 +209,67 @@
         <div class="section-title">
           <h2>Resume</h2>
 
-          <!-- extra line to
-          <p> Download my resume from <a href= "#"> here </a><p></p> -->
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <!-- extra line to -->
+          <p> Download my resume from <a href= "https://github.com/gargharshal/gargharshal.github.io/blob/main/Harshal%20Garg%20Resume%20Official.pdf"> here </a><p></p>
+          <p>Passionate about data science and ML with 2.5+ years of experience in IT. 
+            I have worked on various technologies like Python, SQL, Power BI, AWS etc. 
+            Learned Data Science and Machine Learning through courses and project that are posted on my GitHub</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
+              <h4>HARSHAL GARG</h4>
+              <!-- <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
                   developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
+                  deliverable.</em></p> -->
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>+91-9977816300</li>
+                <li>harshalgargwork@gmail.com</li>
+                <li>linkedin.com/in/harshalgarg</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Master of Fine Arts &amp; Graphic Design</h4>
               <h5>2015 - 2016</h5>
               <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
                 ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
+            </div> -->
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
+              <h4>B.E. - Electrical and Electronics</h4>
+              <h5>2014 - 2018</h5>
+              <p><em>UIT RGPV, Bhopal</em></p>
+              <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
                 unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+                dila</p> -->
             </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Senior Systems Engineer</h4>
+              <h5>JAN 2021 - Present</h5>
+              <p><em>Infosys Limited, Pune</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                  communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                  project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                  design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Migration of database from On-premise SAP BW to AWS Redshift.</li>
+                <li>Deciding architecture, creating mapping documents of the new vs
+                  old databases’ attributes. Creating the table and inserting the
+                  data in the new tables.</li>
+                <li>Deciding architecture, building, and deploying a few of the reports
+                  which will be built on Power BI and connecting them to the new
+                  database</li>
+                <li>I worked on AWS Glue Job using python to generate required
+                  outputs like HTML files by ingesting data from AWS S3 and Redshift.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Systems Engineer</h4>
+              <h5>APRIL 2019 – DEC 2020</h5>
+              <p><em>Infosys Limited, Pune</em></p>
               <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
                   advertisements).</li>
@@ -393,6 +395,7 @@
               <img src="assets/img/projects/different-dog-breed.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Dog Breed Indentification</h4>
+                <h4>Image Classification - CNN</h4>
                 <!-- <p>App, text inside the image when faded</p> -->                 
                 <div class="portfolio-links">
                   <a href="https://github.com/gargharshal/Kaggle/blob/master/Dog%20Breed%20Indentification/Dog%20Breed%20Identification%20-%20My%20Version.ipynb" 
@@ -406,7 +409,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/projects/bulldozer.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>bulldozer</h4>
+                <h4>Bulldozer Price Prediction</h4>
+                <h4>Forest Regression</h4>
                 <!-- <p>App</p> -->
                 <div class="portfolio-links">
                   <a href="https://github.com/gargharshal/Kaggle/blob/master/Bluebook%20for%20Bulldozer/Blue%20Book%20for%20Bulldozers.ipynb"
@@ -421,6 +425,7 @@
               <img src="assets/img/projects/heart-disease.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Heart Disease</h4>
+                <h4>Logistic Regression</h4>
                 <!-- <p>Card</p> -->
                 <div class="portfolio-links">
                   <a href="https://github.com/gargharshal/Kaggle/blob/master/Heart%20Disease/Heart%20Disease.ipynb" 
@@ -436,6 +441,7 @@
               <img src="assets/img/projects/titanic.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Titanic</h4>
+                <h4>Random Forest Classifier</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
                   <a href="https://github.com/gargharshal/Kaggle/blob/master/Titanic/Titanic%20prediction.ipynb"
@@ -450,7 +456,7 @@
       </div>
     </section><!-- End Portfolio - Projects Section -->
 
-    <!-- ======= Services - Certificates Section ======= -->
+    <!-- ======= Certificates - Services Section ======= -->
     <section id="certificates" class="portfolio section-bg">
       <div class="container" data-aos="fade-up">
 
@@ -529,7 +535,8 @@
         </div>
 
       </div>
-    </section><!-- End Services - Certificates Section -->
+    </section>
+    <!-- End Certificates - Services Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
