--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <div class="container">
 
       <h1><a href="index.html">Harshal Garg</a></h1>
+      <!-- <h1>      
+        <img src="assets/img/me-logo-name-white.png" class="img-fluid" alt="">
+      </h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
       <h2>I'm an IT professional passionate about <span>Data Science and Machine Learning</span></h2>
@@ -66,7 +69,7 @@
         <a href="https://medium.com/@gargharshal" title ="Read my blogs on Medium" class="medium"><i class="bx bxl-medium"></i></a>
         <a href="https://in.linkedin.com/in/harshalgarg" title ="Let's connect on LinkedIn" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://github.com/gargharshal" title ="Codes to all my projects" class="github"><i class="bx bxl-github"></i></a>
-        <a href="mailto:harshalgargwork@gmail.com" title ="Send an me an email" class="mail-send"><i class="bx bx-mail-send"></i></a>
+        <a href="mailto:harshalgargwork@gmail.com" title ="Send an me an email" class="mail-send"><i class="bx bx-envelope"></i></a>
         <a href="https://twitter.com/harsh_al_garg" class="twitter" title =  'Follow me on Twitter'><i class="bx bxl-twitter"></i></a>
         <a href="https://www.instagram.com/harsh.al.garg/" title ="Find me on Instagram" class="instagram"><i class="bx bxl-instagram"></i></a>
       </div>
@@ -87,7 +90,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/me-logo-white.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>IT Professional</h3>
