--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>IT Professional</h3>
           <p class="fst-italic">
-            Hi 👋, I'm a Electrical and Electronics Engineer working in IT. I am tech savvy, cinephile and foodie (not
+            Hi 👋, I'm a Electrical and Electronics Engineer working in IT. I am tech savvy, cineophile and foodie (not
             Gourmet). I am currently learning and working on personal projects of Data Science and Machine Learning. I
             am trying to share my knowledge and experience with others through my Blog.
           </p>
